--- a/arts.html
+++ b/arts.html
@@ -19,6 +19,18 @@
     <!-- Responsive stylesheet -->
     <link rel="stylesheet" href="css/responsive.css">
 
+
+    <!--FontAwesome-->
+    <link rel="stylesheet" href="font-awesome/font-awesome-4.7.0/css/font-awesome.min.css">
+    <script src="https://use.fontawesome.com/4e4c1d90ac.js"></script>
+
+    <!--IcoFont-->
+    <link href="css/icofont/css/icofont.css" media="all" rel="stylesheet" type="text/css" />
+
+    <!--MaterialDesign-->
+    <link href="css/material-design-iconic-font/css/material-design-iconic-font.min.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="css/material-design-iconic-font/css/material-design-iconic-font.css" media="all" rel="stylesheet" type="text/css" />
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -163,10 +175,9 @@
                     <div class="irs-courses-col irs-courses-col-single">
 
                         <div class="irs-courses-content">
-                            <h2 style="color: coral">About Computer Science courses</h2>
-                            <p>It deals with the application of science and practical knowledge to the innovation,
-                                 design and construction of various tools and machines that facilitates the building of modern and evolving technology.
-                                 <br>The engineering courses in India are regulated and set up under the aegis of the University Grants Commission (UGC) and the All India Council for Technical Education (AICTE).</p>
+                            <h2 style="color: coral">About Arts courses</h2>
+                            <p>Is a bachelor's degree awarded for an undergraduate course or program in either the liberal arts, the sciences, or both.
+                            It creates opportunities for students to develop skills for life:innovative and open-minded thinking,social adaptability, cultural awareness and inter-personal skills that will inform their future and spark their creativity. </p>
                             <div class="row">
                                 <div class="col-md-7">
                                     <div class="irs-course-features">
