--- a/undergraduate.html
+++ b/undergraduate.html
@@ -18,6 +18,17 @@
     <!-- Responsive stylesheet -->
     <link rel="stylesheet" href="css/responsive.css">
 
+    <!--FontAwesome-->
+    <link rel="stylesheet" href="font-awesome/font-awesome-4.7.0/css/font-awesome.min.css">
+    <script src="https://use.fontawesome.com/4e4c1d90ac.js"></script>
+
+    <!--IcoFont-->
+    <link href="css/icofont/css/icofont.css" media="all" rel="stylesheet" type="text/css" />
+
+    <!--MaterialDesign-->
+    <link href="css/material-design-iconic-font/css/material-design-iconic-font.min.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="css/material-design-iconic-font/css/material-design-iconic-font.css" media="all" rel="stylesheet" type="text/css" />
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -178,7 +189,7 @@
                         </div>
                         <div class="irs-courses-content">
                             <h4><a href="http://irsfoundation.com/tf/templates/EducationPark/course-single.html">Technology</a></h4>
-                            <p>pplication of science and practical knowledge to the innovation,
+                            <p>Application of science and practical knowledge to the innovation,
                                  design, construction, machines, and organizations</p>
                        
                         </div>
