--- a/science.html
+++ b/science.html
@@ -19,6 +19,17 @@
     <!-- Responsive stylesheet -->
     <link rel="stylesheet" href="css/responsive.css">
 
+    <!--FontAwesome-->
+    <link rel="stylesheet" href="font-awesome/font-awesome-4.7.0/css/font-awesome.min.css">
+    <script src="https://use.fontawesome.com/4e4c1d90ac.js"></script>
+
+    <!--IcoFont-->
+    <link href="css/icofont/css/icofont.css" media="all" rel="stylesheet" type="text/css" />
+
+    <!--MaterialDesign-->
+    <link href="css/material-design-iconic-font/css/material-design-iconic-font.min.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="css/material-design-iconic-font/css/material-design-iconic-font.css" media="all" rel="stylesheet" type="text/css" />
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -163,76 +174,69 @@
                     <div class="irs-courses-col irs-courses-col-single">
 
                         <div class="irs-courses-content">
-                            <h2 style="color: coral">About Computer Science courses</h2>
-                            <p>It deals with the application of science and practical knowledge to the innovation,
-                                 design and construction of various tools and machines that facilitates the building of modern and evolving technology.
-                                 <br>The engineering courses in India are regulated and set up under the aegis of the University Grants Commission (UGC) and the All India Council for Technical Education (AICTE).</p>
+                            <h2 style="color: coral">About Science courses</h2>
+                            <p> Science courses imparts knowledge that carries a strong flavour of scienctific content and procedures and an exposure to some social science disciplines. India has a range of courses that provides education in various fields of science ranging from physics to life sciences etc.</p>
                             <div class="row">
                                 <div class="col-md-7">
                                     <div class="irs-course-features">
                                         <h2 style="color: coral">List of Courses</h2>
                                         <ul>
-                                        	<li><strong>B.Sc. (Genl) Mathematical Science</strong> 
-                                        	</li>
+                                        	
                                             <li><strong>B.Sc. (Hons) Anthropology</strong> 
+                                            </li>
+                                            <li><strong>B.Sc. (Hons) Bio-Chemistry</strong> 
+                                            </li>
+                                            <li><strong>B.Sc. (Hons.) Biological Sciences</strong> 
                                             </li>
                                             <li><strong>B.Sc. (Hons) Biomedical Science</strong> 
                                             </li>
+                                             <li><strong>B.Sc. (Hons) Botany</strong> 
+                                            </li>
                                             <li><strong>B.Sc. (Hons) Chemistry</strong> 
                                             </li>
-                                            <li><strong>B.Sc. (Hons) Electronics</strong> 
+                                             <li><strong>B.Sc. (Hons) Computer Science</strong> 
+                                            </li>
+                                            <li><strong>B.Sc. (Hons) Electronic Science</strong> 
+                                            </li>
+                                            <li><strong>B.Sc. (Hons) Food Technology</strong> 
                                             </li>
                                             <li><strong>B.Sc. (Hons) Geology</strong> 
                                             </li>
+                                            <li><strong>B.Sc. (Hons) Home Science</strong> 
+                                            </li>
+                                             <li><strong>B.Sc. (Hons.) Instrumentation</strong> 
+                                            </li>
                                             <li><strong>B.Sc. (Hons) Mathematics</strong> 
+                                            </li>
+                                             <li><strong>B.Sc. (Hons) Microbiology</strong> 
                                             </li>
                                             <li><strong>B.Sc. (Hons) Physics</strong> 
                                             </li>
+                                             <li><strong>B.Sc. (Hons) Polymer Science</strong> 
+                                            </li>
                                             <li><strong>B.Sc. (Hons) Statistics</strong> 
                                             </li>
-                                            <li><strong>B.Sc. (Hons.) Biological Sciences</strong> 
+                                             <li><strong>B.Sc. (Hons) Zoology</strong> 
+                                            </li>
+                                            <li><strong>B.Sc. Applied Life Sciences</strong> 
                                             </li>
                                             <li><strong>B.Sc. Applied Life Sciences with Agro-Chemical & Pest Management</strong> 
                                             </li>
                                             <li><strong>B.Sc. Applied Physical Science</strong> 
                                             </li>
+                                            <li><strong>B.Sc. Applied Physical Science (Analytical Chemistry & Biochemistry)</strong> 
+                                            </li>
                                             <li><strong>B.Sc. Applied Physical Sciences (Industrial Chemistry)</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. Industrial Chemistry</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. Physical Sciences</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. Physical Science Computer Science</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. (Hons.) Instrumentation</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. (Hons) Bio-Chemistry</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. (Hons) Botany</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. (Hons) Computer Science</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. (Hons) Food Technology</strong> 
-                                            </li>
-                                        	<li><strong>B.Sc. (Hons) Home Science</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. (Hons) Microbiology</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. (Hons) Polymer Science</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. (Hons) Zoology</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. (MT) Radiography</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. Applied Life Sciences</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. Applied Science</strong> 
-                                            </li>
-                                            <li><strong>B.Sc. Applied Physical Science (Analytical Chemistry)</strong> 
                                             </li>
                                             <li><strong>B.Sc. Life Sciences</strong> 
                                             </li>
-                                            <li><strong>B.Sc. Physical Science with Chemistry</strong> 
+                                            <li><strong>B.Sc. Mathematical Science</strong> 
+                                            </li>
+                                            <li><strong>B.Sc. Physical Science(Chemistry)</strong> 
+                                            </li>
+                                            <li><strong>B.Sc. Physical Science (Computer Science)</strong> 
+                                            </li>
+                                            <li><strong>B.Sc. Physical Science(Electronics)</strong> 
                                             </li>
                                         </ul>
                                         <!-- <a class="btn btn-default irs-btn-transparent-two" href="http://irsfoundation.com/tf/templates/EducationPark/blog-single.html" role="button">enroll now</a> -->
